test/fails/ir/missreg.ir.interpret
Tried to look up fictitious register Reg 3.
